# fw-bandname-generator

./: .env.example  .gitignore  Pipfile  README.md  app.py  config.py  pyproject.toml  requirements.bu  requirements.txt
app/: __init__.py  auth.py  auth_routes.py  models.py  routes.py  user_routes.py
app/templates/: base.html  gallery.html  index.html  leaderboard.html
app/templates/auth/: login.html  register.html  registration_closed.html
app/templates/errors/: 404.html  500.html
app/templates/user/: dashboard.html
fw-bandname-generator/: .gitignore  README.md  pyproject.toml
fw-bandname-generator/app/: routes.py
fw-bandname-generator/app/templates/: index.html
fw-bandname-generator/static/texts/: 004.txt  012.txt  018.txt  019.txt  029.txt  043.txt  050.txt  051.txt  053.txt  057.txt  061.txt  067.txt  073.txt  076.txt  077.txt  082.txt  088.txt  093.txt  095.txt  098.txt  (+152 more)
migrations/versions/: 3e38e81e8a83_initial_migration_user_and_.py
scripts/: update_bands_from_wikidata.py
src/fw_bandname_generator/: __init__.py
static/data/: bands.tsv  bands.txt
static/texts/: 003.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  013.txt  014.txt  015.txt  016.txt  017.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  041.txt  042.txt  044.txt  045.txt  046.txt  047.txt  048.txt  (+407 more)
tests/: conftest.py  test_auth.py  test_claims.py  test_models.py  test_oauth.py  test_routes.py  test_wikidata_script.py
